--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-  "name": "num-sort",
-  "version": "1.0.0",
-  "description": "Sort an array of numbers",
-  "license": "MIT",
-  "repository": "sindresorhus/num-sort",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "ava"
-  },
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "sort",
-    "sorter",
-    "compare",
-    "comparator",
-    "num",
-    "number",
-    "numbers",
-    "order",
-    "asc",
-    "ascending",
-    "desc",
-    "descending"
-  ],
-  "dependencies": {
-    "number-is-nan": "^1.0.0"
-  },
-  "devDependencies": {
-    "ava": "*"
-  }
+	"name": "num-sort",
+	"version": "1.0.0",
+	"description": "Sort an array of numbers",
+	"license": "MIT",
+	"repository": "sindresorhus/num-sort",
+	"author": {
+		"name": "Sindre Sorhus",
+		"email": "sindresorhus@gmail.com",
+		"url": "sindresorhus.com"
+	},
+	"engines": {
+		"node": ">=8"
+	},
+	"scripts": {
+		"test": "xo && ava && tsd"
+	},
+	"files": [
+		"index.js",
+		"index.d.ts"
+	],
+	"keywords": [
+		"sort",
+		"sorter",
+		"compare",
+		"comparator",
+		"num",
+		"number",
+		"numbers",
+		"order",
+		"asc",
+		"ascending",
+		"desc",
+		"descending"
+	],
+	"devDependencies": {
+		"ava": "^1.4.1",
+		"tsd": "^0.7.2",
+		"xo": "^0.24.0"
+	}
 }
